# netune

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
Docs/: DEBUG_VS_RELEASE.md  PAUSE_BUG_FIX.md  PERF_OPTIMIZATION.md  UI_RESPONSIVENESS.md
crates/netune-api/: Cargo.toml
crates/netune-api/benches/: crypto_bench.rs  lrc_bench.rs  network_bench.rs
crates/netune-api/examples/: check_cookies.rs  get_cookies.rs  qr_login_test.rs  test_import.rs
crates/netune-api/src/: client.rs  crypto.rs  lib.rs  models.rs  weapi_test.rs
crates/netune-core/: Cargo.toml
crates/netune-core/benches/: serde_bench.rs
crates/netune-core/src/: config.rs  error.rs  lib.rs  models.rs  traits.rs
crates/netune-player/: Cargo.toml
crates/netune-player/benches/: queue_bench.rs
crates/netune-player/src/: lib.rs  player.rs  queue.rs
crates/netune-tui/: Cargo.toml
crates/netune-tui/benches/: cache_bench.rs
crates/netune-tui/src/: app.rs  audio_cache.rs  chrome.rs  lib.rs  main.rs  theme.rs
crates/netune-tui/src/pages/: home.rs  login.rs  mod.rs  player.rs  playlist.rs  search.rs  settings.rs
crates/netune-tui/src/widgets/: lyric.rs  mod.rs  progress.rs  qr.rs  queue_panel.rs
