[package]
name = "netune-api"
version.workspace = true
edition.workspace = true

[dependencies]
netune-core = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
reqwest     = { workspace = true }
tracing     = { workspace = true }
aes         = { workspace = true }
cbc         = { workspace = true }
ecb         = { workspace = true }
md-5        = { workspace = true }
hex         = { workspace = true }
base64      = { workspace = true }
getrandom   = { workspace = true }
rsa         = { workspace = true }
url         = { workspace = true }
async-trait = { workspace = true }
chrono      = { workspace = true }
qrcode      = { workspace = true }

[lints]
workspace = true
