[package]
name = "netune-core"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
camino    = { workspace = true }
dirs      = { workspace = true }
toml      = { workspace = true }
tokio     = { workspace = true }
tracing   = { workspace = true }
chrono    = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true
