[package]
name = "netune-player"
version.workspace = true
edition.workspace = true

[dependencies]
netune-core = { workspace = true }
netune-api  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
rodio       = { workspace = true }
reqwest     = { workspace = true }
async-trait = { workspace = true }
