[package]
name = "netune-player"
version.workspace = true
edition.workspace = true

[dependencies]
netune-core = { workspace = true }
netune-api  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
rodio       = { workspace = true }
reqwest     = { workspace = true }
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "queue_bench"
harness = false
