[package]
name = "netune-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "netune"
path = "src/main.rs"

[dependencies]
netune-core   = { workspace = true }
netune-api    = { workspace = true }
netune-player = { workspace = true }
color-eyre    = { workspace = true }
ratatui       = { workspace = true }
crossterm     = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
qrcode        = "0.14"
dirs          = { workspace = true }
reqwest       = { workspace = true }
unicode-width = "0.2"
ratatui-image = { workspace = true }
image = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }

[[bench]]
name = "cache_bench"
harness = false
